--- a/RecipeManager/index.html
+++ b/RecipeManager/index.html
@@ -8,7 +8,7 @@
 <body>
     <grid>
         <row>
-            <p>Wooh</p>
+            <p>Wooh!</p>
         </row>
         <row>
             <p>Wooh</p>
