--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 
 <head>
     <title>Opskrift</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <title>RecipeManager</title>
 
-    <grid>
-        <row>
-            <p>Wooh!</p>
-        </row>
-        <row>
-            <p>Wooh</p>
-        </row>
+    <grid class="recipe-grid-container">
+        <p>Opskrifter</p>
+        <p>Ingredienser</p>
     </grid>
 </body>
 </html
