Added template to display recipe

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 <body>
     <title>RecipeManager</title>
 
-    <grid class="recipe-grid-container">
-        <p>Opskrifter</p>
-        <p>Ingredienser</p>
-    </grid>
+    <p id="NameDisplay"></p>
+    <p id="AmountDisplay"></p>
+
+    <tbody class="recipe-container">
+        <tr>
+            <td><p>Opskrifter</p></td>
+            <td><p>Ingredienser</p></td>
+        </tr>
+    </tbody>
+
+    <template id="recipe-template">
+        
+    </template>
 </body>
 </html
