--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Opskrift</title>
     <link rel="stylesheet" href="index.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 </head>
 
 <body>
@@ -23,12 +24,5 @@
 
         </tbody>
     </table>
-
-    <template id="recipe-template">
-        <tr>
-            <td><p>{{Name}}</p></td>
-            <td><p>{{Ingredients}}</p></td>
-        </tr>
-    </template>
 </body>
 </html
